--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -26,11 +26,11 @@
                   </svg>
                 </a>
               </li>
-              <li  class="nav-item">
+              <li class="nav-item">
                 <a id ="nav_tabs" class="nav-link" href="overview.html">Overview </a>
               </li>
-              <li id="about_header" class="nav-item">
-                <a id ="nav_tabs" class="nav-link" href="visualizations.html">Visualizations </a>
+              <li class="nav-item">
+                <a id ="nav_tabs" class="nav-link" href="Visualizations">Visualizations </a>
               </li>
               <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -51,15 +51,36 @@
       <br>
       <br>
       
-      
-
-    
-
-
-
+      <h1 class="plots_header">Plots</h1>
+      <br>
+      <br>
+      <br>
 
 
+    <div class="container">
+      <div class="row">
+          <div class = "col-md-6">
+            Insert first plot (tbd)
+          
   
+          </div>
+
+          <div class = "col-md-6">
+            Insert second plot (tbd)
+          
+          </div>
+      
+      </div>
+
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+      <div class= "row">
+        <div class = "col-md-12">
+          Insert third plot (tbd)
 
 
 
@@ -67,14 +88,7 @@
 
 
 
+        </div>
 
 
-
-
-
-
-
-
-
-
-</body>
+    </div>
