--- a/templates/overview.html
+++ b/templates/overview.html
@@ -21,14 +21,17 @@
           <li class="nav-item">
             <!-- home icon that returns us to the home page -->
             <a class="nav-link active" aria-current="page" href="index.html">
-              <svg xmlns="http://www.w3.org/2000/svg" width="45" height="30" fill="blue" class="bi bi-house-fill" viewBox="0 0 16 16">
+              <svg xmlns="http://www.w3.org/2000/svg" width="45" height="30" fill="rgb(11, 11, 185)" class="bi bi-house-fill" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
                 <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
               </svg>
             </a>
           </li>
-          <li id="about_header" class="nav-item">
-            <a id ="about_tab" class="nav-link" href="overview.html">About </a>
+          <li id="nav_header" class="nav-item">
+            <a id ="nav_tabs" class="nav-link" href="overview.html">Overview </a>
+          </li>
+          <li id="nav_header" class="nav-item">
+            <a id ="nav_tabs" class="nav-link" href="visualizations.html">Visualizations </a>
           </li>
           <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
