mock page for visualizations.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Vehicle Gouging Ghouls</title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -12,7 +12,7 @@
 </head>
 
 
-<body>
+<body id="background">
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -27,7 +27,7 @@
                 </a>
               </li>
               <li  class="nav-item">
-                <a id ="nav_tabs" class="nav-link" href="overview.html">Overview </a>
+                <a id ="nav_tabs" class="nav-link" href="carsanalyzed.html">Cars Analyzed </a>
               </li>
               <li id="about_header" class="nav-item">
                 <a id ="nav_tabs" class="nav-link" href="visualizations.html">Visualizations </a>
@@ -51,6 +51,12 @@
       <br>
       <br>
       
+      <div>
+          <h1>Home Page still to be started....</h1>
+
+
+
+      </div>
       
 
     
