--- a/templates/style.css
+++ b/templates/style.css
@@ -1,27 +1,78 @@
+/* Visualization Page Header Formatting */
 .plots_header {
     background: linear-gradient(to right, white,rgb(231, 201, 173),rgb(233, 127, 40));
-    padding:2em
+    padding:2em;
+    text-align: center;
 }
 
+/* navbar formatting */
 .navbar {
     background: linear-gradient(to right, white,rgb(231, 201, 173),rgb(233, 127, 40));
     opacity: 0.8;
 }
 
+/* navbar tabs formatting */
 #nav_tabs {
     font-weight: bold;
     font-size: larger;
-    color:rgb(11, 11, 185)
+    color:rgb(11, 11, 185);
+    
 }
 
 
 
-
+/* formatting of cards on carsanalyzed.html */
 #card_format {
-    background-color: rgb(231, 201, 173);
+    background-color: rgb(236, 222, 208);
+    color:rgb(11, 11, 185);
     padding:1em;
     margin-right:2%;
     text-align: left;
     font-size: 15px;
-    font-weight: 500;
+    font-weight:700;
 }
+
+/* formatting of general characteristics of carousel */
+#carouselExampleIndicators {
+    width: 800px;
+    margin-left: 19%;
+    padding: 1em;
+    background: rgb(236, 222, 208) ;
+}
+
+/* background for each html page */
+#background {
+    background: beige;
+}
+
+/* Styling for Jeep car title in carousel */
+#carousel_jeep_title {
+    color: rgb(11, 11, 185);
+    font-size: 40px;
+    margin-bottom: 77%;
+}
+/* Styling for Ford car title in carousel */
+#carousel_ford_title {
+    color: rgb(11, 11, 185);
+    font-size: 40px;
+    margin-bottom: 68%;
+}
+/* Styling for Chevy title in carousel */
+#carousel_chevy_title {
+    color: rgb(11, 11, 185);
+    font-size: 40px;
+    margin-bottom: 85%;
+}
+/* Styling for GMC car title in carousel */
+#carousel_gmc_title {
+    color: rgb(11, 11, 185);
+    font-size: 40px;
+    margin-bottom: 85%;
+}
+/* Styling for Toyota car title in carousel */
+#carousel_toyota_title {
+    color: rgb(11, 11, 185);
+    font-size: 40px;
+    margin-bottom: 85%;
+}
+
