--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Vehicle Gouging Ghouls</title>
+    <title>Visualizations </title>
     <link rel="stylesheet" href="style.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -12,7 +12,7 @@
 </head>
 
 
-<body>
+<body id="background">
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -27,10 +27,10 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a id ="nav_tabs" class="nav-link" href="overview.html">Overview </a>
+                <a id ="nav_tabs" class="nav-link" href="carsanalyzed.html">Cars Analyzed </a>
               </li>
               <li class="nav-item">
-                <a id ="nav_tabs" class="nav-link" href="Visualizations">Visualizations </a>
+                <a id ="nav_tabs" class="nav-link" href="Visualizations.html">Visualizations </a>
               </li>
               <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -51,7 +51,13 @@
       <br>
       <br>
       
-      <h1 class="plots_header">Plots</h1>
+      <div class="plots_header" >
+            <h1> Plots</h1>
+            <p>This is the page in which our interactive plots will have capability to be  adjusted by the end-user </p>
+            <p>Therefore, Javascript will need to be applied to this html file ("visualizations.html") </p>
+      </div>
+      
+      
       <br>
       <br>
       <br>
@@ -89,6 +95,12 @@
 
 
         </div>
+
+
+
+
+
+       
 
 
     </div>
