home page rough draft

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,38 +49,82 @@
       </nav>
 
       <br>
+
+      <h2 class="home_page_header">Vehicle Price Gouging</h2>
+      <br>
       <br>
       
-      <div>
-          <h1>Home Page still to be started....</h1>
+      <div class="container">
+        <div class="row">
+            
+
+          <div class = "col-md-6" > 
+            
+            <img class="home_image" src="https://www.fenderbender.com/ext/resources/car-climbing-coins-flat-2.jpg?t=1624273302&width=1080">
+
+          </div>
+
+          <div class = "col-md-6" > 
+            <div class="accordion" id="accordion_layout">
+              <div id="accordion_dropdown" class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                  <button id="button_accord" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <h5 >What is this project about?</h5>
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+               <!-- break inbetween accordion dropdowns -->
+               <br> 
+              <div id="accordion_dropdown" class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button id="button_accord" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <h5>Why was this project conducted?</h5>
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+              <!-- break inbetween accordion dropdowns -->
+              <br> 
+              <div id="accordion_dropdown" class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                  <button id="button_accord" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <h5>Where was the data obtained?</h5>
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+            
+          </div>
 
 
 
-      </div>
+        
+        
+        </div>
       
-
-    
-
-
+      </div>
 
 
 
   
 
+      
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    
 
 </body>
