--- a/templates/carsanalyzed.html
+++ b/templates/carsanalyzed.html
@@ -196,19 +196,19 @@
         <div class="carousel-item">
           <img src="https://s3.us-east-2.amazonaws.com/dealer-inspire-vps-vehicle-images/stock-images/chrome/cf42147dad1f35806a05a5a7eb3d6ea1.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5 id="carousel_chevy_title" > 2021 Chevy Silverado</h5>
+            <h5 id="carousel_chevy_title" > 2021 Chevrolet Silverado</h5>
           </div>
         </div>
         <div class="carousel-item">
           <img src="https://cdn.jdpower.com/ChromeImageGallery/Expanded/Transparent/640/2021GMT17_640/2021GMT170001_640_01.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5 id="carousel_gmc_title" >GMC Sierra</h5>
+            <h5 id="carousel_gmc_title" > 2021 GMC Sierra</h5>
           </div>
         </div>
         <div class="carousel-item">
           <img src= "https://www.buyatoyota.com/assets/img/vehicle-info/Tundra/2021/hero_image_tundra.png"  class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5 id="carousel_toyota_title" >Toyota Tundra</h5>
+            <h5 id="carousel_toyota_title" > 2021 Toyota Tundra</h5>
           </div>
         </div>
       </div>
