slight progress on HTML

--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -10,6 +10,47 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+  /* Meet the Team Section */
+  
+  .team_header {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    margin-left: 9%;
+    font-size: 60px;
+  }
+
+  #meetteam_format {
+    margin-left: 9%;
+  }
+
+  #hyperlinks {
+      color: white;
+      font-weight: bolder;
+      text-decoration: none;
+      font-size: 15px;
+      margin-left: 22%;
+     
+  }
+
+  #team_pics {
+    border-radius: 50%;
+  }
+
+  .name {
+    font-size: 18px;
+    margin-left: 7%;
+    text-decoration: none;
+    color: white;    
+  }
+
+  .name_rob {
+    font-size: 18px;
+    margin-left: 14%;
+    text-decoration: none;
+    color: white;    
+  }
+
+
 :root {
   --bs-blue: #1D809F;
   --bs-indigo: #6610f2;
