additional html pages with jquery links added

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,14 +13,12 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <!-- About-->
-        <strong>I AM INTERNET YELLING AND BREAKING EVERY LAW!</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-
-
+        <!-- What is this project about?-->
+        <p>When one delves into the prospect of buying a new vehicle, the term 'MSRP' (Manufacturer's Suggested Retail Price)
+            is an effective determinant from which consumers obtain an idea for the value of a specific vehicle
+        </p> 
+        <p>This project serves to explore the variance in MSRP & listed/selling price for two different sample sizes of vehicles.           
+        </p> 
         
     </body>
 </html>
