--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -28,7 +28,7 @@
       font-weight: bolder;
       text-decoration: none;
       font-size: 15px;
-      margin-left: 22%;
+      margin-left: 27%;
      
   }
 
@@ -38,7 +38,7 @@
 
   .name {
     font-size: 18px;
-    margin-left: 7%;
+    margin-left: 10%;
     text-decoration: none;
     color: white;    
   }
@@ -11346,8 +11346,8 @@ html {
 
 
 .content-section {
-  padding-top: 7.5rem;
-  padding-bottom: 7.5rem;
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
 }
 
 .content-section-heading h2, .content-section-heading .h2 {
@@ -11442,10 +11442,10 @@ html {
   color: #fff;
   background: none;
 }
-
+/* width_of_nav */
 #sidebar-wrapper.active {
   right: 250px;
-  width: 250px;
+  width: 160px;
   transition: all 0.4s ease 0s;
 }
 
