--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
         <title>about</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <!-- What is this project about?-->
