--- a/templates/map.html
+++ b/templates/map.html
@@ -6,12 +6,16 @@
         <title>about</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     
     <body>
-    
-        <!-- Insert code for leaflet map. Code also needs to be added to Java, similar to Leaflet HWK     -->
-        -here gets placed geocoded dealerships marker map
+
+      <!-- The div where we'll insert our map -->
+    <div id="map"></div>
+
+    <!-- JavaScript file -->
+    <script type="text/javascript" src="js/scripts.js"></script>
+       
     </body>
 </html>
