--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand"><a href="#home">Home</a></li>
                 <li class="sidebar-nav-item"><a href="#about">About</a></li>
-                <li class="sidebar-nav-item"><a href="#map-leaflet">Map</a></li>
+                <li class="sidebar-nav-item"><a href="#map">Map</a></li>
                 <li class="sidebar-nav-item"><a href="#visualizations">Visualizations</a></li>
                 <li class="sidebar-nav-item"><a href="#meet_the_team">Meet the Team!</a></li>
                 <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
@@ -159,7 +159,7 @@
         </section>
 
         <!-- Leaflet Map-->
-        <section class="content-section bg-primary text-white text-center" id="map-leaflet">
+        <section class="content-section bg-primary text-white text-center" id="map">
             <h2> Distribution of Data by Texas Dealer</h2>
            
             <!-- start of map.html -->
